fixed issue with paagroughs overlapped on images by adding media queries range styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,3 +154,15 @@ footer {
         font-size: 1rem;
     }  
 }
+
+@media only screen and (min-width: 975px) and (max-width: 1500px) {
+    .article_area h4,p,hr {
+        margin-left: 10%;
+    }
+}
+
+@media only screen and (min-width: 970px) and (max-width: 1140px) {
+    .article_area h4,p,hr {
+        margin-left: 20%;
+    }
+}
